# snowflake-sdk

./: .gitignore
price-checker/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
price-checker/src/: error.rs  instruction.rs  lib.rs  utils.rs
price-checker/test/: test-price-checker.ts  test-pyth.ts  test.ts  utils.ts
snowflake-app-settings/: .gitignore  package-lock.json  package.json
snowflake-app-settings/src/: app-serttings-service.ts  test.ts
snowflake-cli/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json  tslint.json
snowflake-cli/src/: index.ts  utils.ts
snowflake-operator/: .gitignore  README.md  index.js  log4js.json  package-lock.json  package.json  tsconfig.json
snowflake-operator/keys/: operator_wallet.json
snowflake-operator/src/: index.ts  local-operator.ts  snow-operator.ts  snow-service.ts  test.ts
snowflake-operator/test/: job-cache.test.ts  operator.test.ts  (+1 more)
snowflake-program-settings/: README.md  package-lock.json  package.json  tsconfig.json
snowflake-rust/: .gitignore  readme.txt
snowflake-rust/programs/snowflake/: Cargo.toml
snowflake-rust/programs/snowflake/.coderrect/logs/: log.current
snowflake-rust/programs/snowflake/src/: error.rs  lib.rs
snowflake-rust/programs/snowflake/src/cron/: crontab.rs  mod.rs  snowtime.rs  test_helpers.rs  times.rs
snowflake-sdk/: .env  .gitignore  README.md  log4js.json  package-lock.json  package.json  tsconfig.json
snowflake-ui/: .gitignore  .prettierrc.js  README.md  draft.js  package-lock.json  package.json  test.js  tsconfig.json
(+130 files in other folders)
