[package]
name = "snowflake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "snowflake"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0"
bs58 = "0.3.1"
thiserror = "1.0.20"

[dependencies.spl-token]
version = "3.1.1"
features = ["no-entrypoint"]